--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="http:////at.alicdn.com/t/font_3371173_6r7whj3jhwi.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_3371173_n9w5biqxkl.css">
     <title>Vite App</title>
   </head>
   <body>
